src/styles.css
/* ... */
.main-cta-ghost {
  background-color: white;
  border-radius: 5px;
  border-style: none;
  color: black;
  font-family: Rubik, sans-serif;
  font-weight: 500;
  min-width: 150px;
  padding: 20px;
  text-align: center;
  border: 0.5px solid grey;
}

.main-cta-ghost:hover {
  color: white;
  background: linear-gradient(-60deg, #cb1a8f, #fc02a7);
  border-color: white;
}

/* .btn {
  background: linear-gradient(-60deg, #cb1a8f, #fc02a7);
  border-radius: 5px;
  border-style: none;
  color: #ffffff;
  font-family: Rubik, sans-serif;
  font-weight: 500;
  margin-bottom: 20px;
  margin-top: 10px;
  min-width: 150px;
  padding: 20px;
  text-align: center;
  transition-duration: 0.3s;
  transition-property: background-color, color;
} */

.bg-gradient-purple {
  background: linear-gradient(-60deg, #A20ED3, #6C5DFE);
}

.bg-gradient-white-transparent {
  background: rgb(255,255,255);
  background: -moz-linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9248074229691877) 100%);
  background: -webkit-linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9248074229691877) 100%);
  background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9248074229691877) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ffffff",GradientType=1);
}



.fQYPTi {
    width: 24px;
    height: 24px;
    box-shadow: rgba(0, 0, 0, 0.075) 0px 6px 10px;
    border-radius: 24px;
}

.gjVeBU {
  display: flex;
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  justify-content: space-between;
}

.stake-button {
  background: #fc02a7;
  color: white;
  font-size: 22px;
  font-weight: 400;
  min-height: 70px;
}

.stake-button:disabled {
  background: #d1d1d1 !important;
  pointer-events: none;
  transition: none !important;
  color: #656565;
  opacity: 0.6;
}

.stake-button.error {
  background: #f7f7f7;
}


.max-button {
  height: 28px;
  background-color:#fc02a7;
  border-radius: 0.5rem;
  font-size: 0.875rem;
  font-weight: 500;
  cursor: pointer;
  margin-right: 15px;
  color: white;
}

/* END LOADING GIF */

.LPcxt[data-reach-dialog-overlay] {
  z-index: 2;
  overflow: hidden;
  display: flex;
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: center;
  justify-content: center;
  background-color: rgba(0, 0, 0, 0.424);
}


constructed stylesheet
.iNRcfz[data-reach-dialog-content] {
    margin: 0px 0px 2rem;
    background-color: rgb(33, 36, 41);
    box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 8px 0px;
    padding: 0px;
    width: 50vw;
    overflow: hidden;
    align-self: center;
    max-width: 420px;
    max-height: 80vh;
    min-height: 80vh;
    display: flex;
    border-radius: 20px;
}

.dBqbKF {
  display: flex;
  flex-direction: column;
  -webkit-box-pack: start;
  justify-content: flex-start;
}

.iUweoe {
  display: grid;
  grid-auto-rows: auto;
  row-gap: 14px;
  padding: 20px 20px 12px;
}

.hwjYkd {
  box-sizing: border-box;
  margin: 0px;
  min-width: 0px;
  width: 100%;
  display: flex;
  padding: 0px;
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  justify-content: space-between;
}

.iRbrWk {
  position: relative;
  display: flex;
  padding: 16px;
  -webkit-box-align: center;
  align-items: center;
  width: 100%;
  white-space: nowrap;
  background: none;
  outline: none;
  border-radius: 20px;
  color: rgb(255, 255, 255);
  border: 1px solid rgb(64, 68, 79);
  appearance: none;
  font-size: 18px;
  transition: border 100ms ease 0s;
}

.hwjYkd {
  box-sizing: border-box;
  margin: 0px;
  min-width: 0px;
  width: 100%;
  display: flex;
  padding: 0px;
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  justify-content: space-between;
}

.kCIHmB {
  width: 100%;
  height: 1px;
  background-color: rgb(44, 47, 54);
}

.resize-triggers, .resize-triggers > div, .contract-trigger:before {
  content: " ";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
  z-index: -1;
}

.kCIHmB {
  width: 100%;
  height: 1px;
  background-color: rgb(44, 47, 54);
}

.hzjlhG {
  box-sizing: border-box;
  margin: 0px;
  min-width: 0px;
  width: 100%;
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  justify-content: space-between;
  padding: 4px 20px;
  height: 56px;
  display: grid;
  grid-template-columns: auto minmax(auto, 1fr) auto minmax(0px, 72px);
  gap: 16px;
  cursor: pointer;
  opacity: 1;
}

.hWkksX {
  width: 24px;
  height: 24px;
  border-radius: 24px;
  box-shadow: rgba(0, 0, 0, 0.075) 0px 6px 10px;
}

.dBqbKF {
  display: flex;
  flex-direction: column;
  -webkit-box-pack: start;
  justify-content: flex-start;
}

.css-8mokm4 {
  box-sizing: border-box;
  margin: 0px;
  min-width: 0px;
  font-weight: 500;
}

.ljKqEC {
  box-sizing: border-box;
  margin: 0px;
  min-width: 0px;
  display: flex;
  padding: 0px;
  -webkit-box-align: center;
  align-items: center;
  width: fit-content;
  color: rgb(33, 114, 229);
  font-size: 14px;
}

.ckdPEj {
  box-sizing: border-box;
  margin: 0px;
  min-width: 0px;
  display: flex;
  padding: 0px;
  -webkit-box-align: center;
  align-items: center;
  width: fit-content;
}

/* purgecss end ignore */

.keyborder { border-bottom: solid 1px #a2a2a2; }

button.svelte-1nn74u2 {border: none!important; padding: 1rem 0rem!important;}

.genericmodal {
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
  background-color: rgba(35, 30, 34, 0.9);
  background: rgba(35, 30, 34, 0.9);
  color: rgba(35, 30, 34, 0.9);
  max-width: 100vw;
}

.modalcontent{
  z-index: 200;
  border-radius: 10px;
}

.borderDiveder {
  margin: 0 10px;
  border-bottom: solid 0.5px #b9b9b9;
}

.genericbanner {
  position: fixed;
  left: 40px;
  top: 40px;
  right: 0;
  bottom: 0;
  z-index: 100;
  border-radius: 10px;
  width: fit-content;
  height: fit-content;
  border: 1px solid #d53a9d;
}
/* ... */

